k8s/ns.yml
apiVersion: v1
kind: Namespace
metadata:   
  name: temp
  labels:
    app: springboot
    appenv: dev
    istio-injection: enabled
